Use interactive UI tests for Chrome visibility observer tests.

Use interactive UI tests for Chrome visibility observer tests and change the logic of the test:
- Now test class inherits both from InProcessBrowserTest and ChromeVisibilityObserver,
Previously observer was created after first browser creation that why observer and browser states were not in sync in the beginning of the test
- Deactivate doesn't works for mac
- For tests only, when browser is deactivated observer is notified immediately instead of delayed task.

Bug: 817172
Change-Id: I71c0e8072210af9999e9acee7910ca435d7e1d80
Reviewed-on: https://chromium-review.googlesource.com/951409
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Gayane Petrosyan <gayane@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545335}
Former-commit-id: 07f44e3e242f03f35ccbc49034c44ce2c18ef700